# django-keoh-userprofile

./: .coverage  .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  setup.cfg  setup.py  tox.ini
tests/unit/: test_import.py
user_profile/: admin.py  forms.py  models.py  pipeline.py  storage.py  urls.py  views.py
user_profile/migrations/: 0001_initial.py
user_profile/static/css/: userprofile.css
user_profile/static/js/: awesome-forms.js
user_profile/templates/: base.html  login.html  plain-login.html  profile-edit.html  profile.html  signin.html  signup.html  signup2.html
