[metadata]
name = django-keoh-userprofile
author = Francisco Manzano

[tool:pytest]
flake8-ignore =
    docs/source/conf.py ALL
    user_profile/migrations/*.py ALL

addopts=--flake8 -m "not wip" -vv --cov-report html:.cov_html --cov-report term --cov user_profile/

[pbr]
autodoc_tree_index_modules=True

[build_sphinx]
builder=html
source-dir=docs/source

[alias]
test=pytest behave

[extras]
doc =
    sphinx
    sphinxcontrib-napoleon
    sphinxcontrib-httpdomain